objects/ENSProduct__c.object
<CustomObject>
    <description>Contains all the products available for selection on the Job Item object</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>eLearning</fullName>
                </value>
                <value>
                    <fullName>English language books</fullName>
                </value>
                <value>
                    <fullName>Foreign language books</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DataMigrationFK__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Used by Glenn for data migration only.</inlineHelpText>
        <label>DataMigrationFK</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_to_Face_Day__c</fullName>
        <inlineHelpText>Flag whether this product should be classified as a Face to Face day for the purposes of calculating how many presenter-days a client would say they have experienced. For example, for a 3-day, 2-presenter program, we want to show 6-F2F days.</inlineHelpText>
        <label>Face to Face Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYOB_Code__c</fullName>
        <label>MYOB Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Deliverable__c</fullName>
        <externalId>true</externalId>
        <label>Old Deliverable</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NIP Flat</fullName>
                </value>
                <value>
                    <fullName>NIP 360</fullName>
                </value>
                <value>
                    <fullName>Tailored Case Studies</fullName>
                </value>
                <value>
                    <fullName>Training Day</fullName>
                </value>
                <value>
                    <fullName>Additional Day</fullName>
                </value>
                <value>
                    <fullName>Manual: 250 Page</fullName>
                </value>
                <value>
                    <fullName>Workbook: 96 Page</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>eLearning</fullName>
                </value>
                <value>
                    <fullName>Leaders Guide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <inlineHelpText>The unit of measure for this product.</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ENSProduct</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ENSProducts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>